Update Dockerfile to multi-stage build