@@ -1,9 +1,20 @@
+# ---------- Stage 1: Build ----------
+FROM maven:3.9.9-eclipse-temurin-21-alpine AS builder
+
+WORKDIR /app
+
+COPY . .
+
+RUN ./mvnw clean package -DskipTests
+
+
+# ---------- Stage 2: Run ----------
 FROM eclipse-temurin:21-jdk-alpine
 
 WORKDIR /app
 
-COPY target/sastracare-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=builder /app/target/sastracare-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "--enable-preview", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
